--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a class="navbar-brand" asp-area="" asp-page="/Index">
-            <img src="~/svg/book.svg" alt="BookStore Logo" />
+            <img src="~/svg/book1.svg" alt="BookStore Logo" />
         </a>
         <nav>
             <ul class="nav__links">
@@ -28,8 +28,10 @@
             </ul>
 
         </nav>
-
+        <div>
         <a class="cta" asp-area="" asp-page="/BookView/Index">Browse Books</a>
+        <a class="cta" asp-area="" asp-page="/Tools/Index">Tools</a>
+        </div>
 
     </header>
     <div class="overlay">
