--- a/wwwroot/css/navbar.css
+++ b/wwwroot/css/navbar.css
@@ -11,7 +11,13 @@ header {
     padding: 30px 10%;
     background-color: #24252a;
     max-height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000; /* High z-index value to ensure the navbar is above the content */
 }
+
 
 .logo {
     cursor: pointer;
