--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,25 +1,26 @@
-html {
-  font-size: 14px;
+﻿html {
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
+
 .footer {
     background-color: #fff;
 }
-.container{
-    padding-top: 50px;
+
+.container {
+    padding-top: 150px;
 }
