--- a/Pages/ContactView/Unconfirmed.cshtml
+++ b/Pages/ContactView/Unconfirmed.cshtml
@@ -13,7 +13,7 @@
 <body>
 	<h1>The message couldn't be sent</h1>
 	<ol>
-		<li>Check that all the required fields have been filled out correctly, such as the name, email, and message fields.</li>
+		<li>Check that all the required fields have been filled out correctly, such as the name, email fields.</li>
 		<li>Make sure that the email address you entered is valid and correctly formatted.</li>
 		<li>Check your internet connection to ensure that it is stable and working properly.</li>
 		<li>Try using a different browser or clearing your browser cache and cookies.</li>
