--- a/wwwroot/css/Unconfirmed.css
+++ b/wwwroot/css/Unconfirmed.css
@@ -1,10 +1,11 @@
 ﻿body {
-	background-color: #f2f2f2;
+	background-color: black;
 	font-family: Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
 	margin: 0;
 	padding: 0;
+	color: white;
 }
 
 h1 {
