--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="content-wrapper">
         <div class="container">
             <div class="textContainer">
-                <h1>Book Rental Website </h1>
+                <h1>BookHub </h1>
                 <p>Created by</p>
                 <p>Bala Robert-Valentin</p>
                 <p>
