Adding a basket functionality.

--- a/Pages/BookView/Create.cshtml
+++ b/Pages/BookView/Create.cshtml
@@ -40,9 +40,9 @@
                 <span asp-validation-for="Books.Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Books.RentalPrice" class="control-label"></label>
-                <input asp-for="Books.RentalPrice" class="form-control" />
-                <span asp-validation-for="Books.RentalPrice" class="text-danger"></span>
+                <label asp-for="Books.Price" class="control-label"></label>
+                <input asp-for="Books.Price" class="form-control" />
+                <span asp-validation-for="Books.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Books.Publisher" class="control-label"></label>
