--- a/Pages/BookView/Delete.cshtml
+++ b/Pages/BookView/Delete.cshtml
@@ -23,7 +23,7 @@
                         <p class="card-text"><small class="text-muted">Author: @Html.DisplayFor(model => model.Books.Author)</small></p>
                         <p class="card-text">Description: @Html.DisplayFor(model => model.Books.Description)</p>
                         <p class="card-text">Genre: @Html.DisplayFor(model => model.Books.Genre)</p>
-                        <p class="card-text">Rental Price: @Html.DisplayFor(model => model.Books.RentalPrice)</p>
+                        <p class="card-text">Rental Price: @Html.DisplayFor(model => model.Books.Price)</p>
                         <p class="card-text">Publisher: @Html.DisplayFor(model => model.Books.Publisher)</p>
                         <p class="card-text">Year: @Html.DisplayFor(model => model.Books.Year)</p>
                         <p class="card-text">Pages: @Html.DisplayFor(model => model.Books.Pages)</p>
