--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - BookRental</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+    @inject BookRental.Services.CartService CartService
 </head>
 <body>
     <header>
+
+
+
         <a class="navbar-brand" asp-area="" asp-page="/Index">
             <img src="~/svg/book1.svg" alt="BookStore Logo" />
         </a>
+
+
+
         <nav>
+
+
             <ul class="nav__links">
                 <li>
                     <a asp-area="" asp-page="/Index">Home</a>
@@ -25,12 +35,18 @@
                     <a asp-area="" asp-page="/ContactView/Contact">Contact</a>
                 </li>
 
+               
+
             </ul>
 
         </nav>
         <div>
         <a class="cta" asp-area="" asp-page="/BookView/Index">Browse Books</a>
-        <a class="cta" asp-area="" asp-page="/Tools/Index">Tools</a>
+        <a class="cta" asp-area="" asp-page="/Cart/Index">
+            <span class="cart-icon bi bi-cart">
+            </span>
+            <span class="cart-count">@CartService.GetReadOnlyCartItems().Count</span>
+        </a>
         </div>
 
     </header>
