--- a/Pages/Cart/Index.cshtml
+++ b/Pages/Cart/Index.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewData["Title"] = "Shopping Cart";
 }
+
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 <link rel="stylesheet" href="~/css/Cart.css" asp-append-version="true" />
 
 <div class="container ">
@@ -61,7 +66,12 @@
                 </tr>
             }
         </tbody>
+
     </table>
+    @if (Model.CartItems.Count == 0)
+    {
+        <h1>The basket is empty</h1>
+    }
     <p class="text-danger">
         <strong>Total Cost:</strong> @Model.TotalCost$
     </p>
