--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -41,13 +46,29 @@
             </ul>
 
         </nav>
-        <div>
-        <a class="cta" asp-area="" asp-page="/BookView/Index">Browse Books</a>
-        <a class="cta" asp-area="" asp-page="/Cart/Index">
-            <span class="cart-icon bi bi-cart">
-            </span>
-            <span class="cart-count">@CartService.GetReadOnlyCartItems().Count</span>
-        </a>
+        <div class="d-flex flex-row align-content-center">
+            <div class="">
+                <a class="cta" asp-area="" asp-page="/BookView/Index">Browse Books</a>
+                <a class="cta" asp-area="" asp-page="/Cart/Index">
+                    <span class="cart-icon bi bi-cart">
+                    </span>
+                    <span class="cart-count">@CartService.GetReadOnlyCartItems().Count</span>
+                </a>
+            </div>
+            <div>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <a  id="manage" class="nav-link text-white font-monospace " asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
+                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link text-white border-0 font-monospace">Logout</button>
+                    </form>
+                }
+                else
+                {
+                    <a class="nav-link text-white font-monospace" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                    <a class="nav-link text-white font-monospace" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                }
+            </div>
         </div>
 
     </header>
