--- a/Pages/BookView/Index.cshtml
+++ b/Pages/BookView/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@page
+﻿
+@page
 @model BookRental.Pages.Book.IndexModel
 
 @{
     ViewData["Title"] = "Index";
 }
-
+@using System.ComponentModel.DataAnnotations
 <link rel="stylesheet" href="~/css/BrowseBooks.css" asp-append-version="true" />
 
 <body>
@@ -42,6 +43,43 @@
                 </div>
             </form>
             <hr>
+            <div class="col-md-2">
+                <div class="card mb-4 box-shadow">
+                        <form method="get">
+                            <div class="input-group mb-3">
+                                <select name="LanguageSort" class="form-control" asp-for="LanguageSort" onchange="this.form.submit()">
+                                    <option value="">All Languages</option>
+                                    @foreach (var item in Enum.GetValues(typeof(BookRental.Models.Language)))
+                                    {
+                                        <option value="@item">@item</option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="input-group mb-3">
+                                <select name="GenreSort" class="form-control" asp-for="GenreSort" onchange="this.form.submit()">
+                                    <option value="">All Genres</option>
+                                    @foreach (var item in Enum.GetValues(typeof(BookRental.Models.Genre)))
+                                    {
+                                        var displayName = (typeof(BookRental.Models.Genre)).GetField(item.ToString())
+                                        .GetCustomAttributes(typeof(DisplayAttribute), false)
+                                        .SingleOrDefault() is DisplayAttribute displayAttribute ? displayAttribute.Name : item.ToString();
+
+                                        <option value="@item">@displayName</option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="input-group mb-3">
+                                <select name="YearSort" class="form-control" asp-for="YearSort" onchange="this.form.submit()">
+                                    <option value="">Sort by Year</option>
+                                    @for (int year = 1950; year <= DateTime.Now.Year; year++)
+                                    {
+                                        <option value="@year">@year</option>
+                                    }
+                                </select>
+                            </div>
+                        </form>
+                </div>
+            </div>
 
             <div class="boxes">
                 <div class="book-grid mx-auto">
